--- a/A2/app/src/main/AndroidManifest.xml
+++ b/A2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.A2hienhnguyen110">
         <activity
+            android:name=".ListOfPurchasesActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
