--- a/T1-hien-hnguyen110/app/src/main/AndroidManifest.xml
+++ b/T1-hien-hnguyen110/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.seneca.t1_hien_hnguyen110">
+    package="com.seneca.t1_hien_hnguyen110" >
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.T1hienhnguyen110">
+        android:theme="@style/Theme.T1hienhnguyen110" >
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".views.PokemonDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
