--- a/A3/app/src/main/AndroidManifest.xml
+++ b/A3/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.seneca.a3_hien_hnguyen110">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,5 +25,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
