--- a/A3/app/src/main/AndroidManifest.xml
+++ b/A3/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.seneca.a3_hien_hnguyen110">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
